<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wild Kingdom</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_view_welcom_wild_kingdom">Welcom to Wild Kingdom</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_brown_bear">Brown Bear</string>
    <string name="button_grizzly_bear">Grizzly Bear</string>
    <string name="button_wombat" >Wombat</string>
    <string name="button_gecko">Gecko</string>
    <string name="button_coral_snake">Coral Snake</string>
    <string name="button_tortoise">Tortoise</string>
    <string name="text_view_select">Choose an option</string>
    <string name="text_view_habitad">HABITAT:</string>
    <string name="text_view_description">DESCRIPTION:</string>
    <string name="text_view_minus_minus">------------------------------------------</string>
    <string name="button_next_animal">Next animal</string>

</resources>
